[FIX] web: add padding right for button show or visible field of list view
in list view, button add or hide field  is overridden by the scrollbar
so it cannot be clicked, this error only appears on firefox. I increased
the horizontal padding on the button to resolve this error

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -342,6 +342,7 @@
         text-align: center;
         line-height: 30px;
         z-index: 1; // must be over the resize handle
+        padding-right: 15px;
     }
 
     .o_optional_columns {
